--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ mccabe==0.6.1
 numpy==1.17.4
 openpyxl==2.6.3
 pandas==0.25.3
+patsy==0.5.1
 Pillow==5.4.1
 psycopg2-binary==2.8.3
 pycodestyle==2.5.0
@@ -26,6 +27,7 @@ seaborn==0.10.0
 six==1.12.0
 sqlacodegen==2.1.0
 SQLAlchemy==1.3.8
+statsmodels==0.11.1
 typed-ast==1.4.0
 wrapt==1.11.2
 xlrd==1.2.0
