--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
-astroid==2.2.5
-autopep8==1.4.4
-colorama==0.4.3
-cycler==0.10.0
-et-xmlfile==1.0.1
-inflect==2.1.0
-isort==4.3.21
-jdcal==1.4.1
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-matplotlib==3.1.3
-mccabe==0.6.1
-numpy==1.17.4
-openpyxl==2.6.3
-pandas==0.25.3
-patsy==0.5.1
-Pillow==5.4.1
-psycopg2-binary==2.8.3
-pycodestyle==2.5.0
-pylint==2.3.1
-pyparsing==2.4.6
-python-dateutil==2.8.1
-pytz==2019.3
-rope==0.14.0
-scipy==1.4.1
-seaborn==0.10.0
-six==1.12.0
-sqlacodegen==2.1.0
-SQLAlchemy==1.3.8
-statsmodels==0.11.1
-typed-ast==1.4.0
-wrapt==1.11.2
-xlrd==1.2.0
+astroid>=2.2.5
+autopep8>=1.4.4
+colorama>=0.4.3
+cycler>=0.10.0
+et-xmlfile>=1.0.1
+inflect>=2.1.0
+isort>=4.3.21
+jdcal>=1.4.1
+kiwisolver>=1.1.0
+lazy-object-proxy>=1.4.2
+matplotlib>=3.1.3
+mccabe>=0.6.1
+numpy>=1.17.4
+openpyxl>=2.6.3
+pandas>=0.25.3
+patsy>=0.5.1
+Pillow>=6.2.0
+psycopg2-binary>=2.8.3
+pycodestyle>=2.5.0
+pylint>=2.3.1
+pyparsing>=2.4.6
+python-dateutil>=2.8.1
+pytz>=2019.3
+rope>=0.14.0
+scipy>=1.4.1
+seaborn>=0.10.0
+six>=1.12.0
+sqlacodegen>=2.1.0
+SQLAlchemy>=1.3.8
+statsmodels>=0.11.1
+typed-ast>=1.4.0
+wrapt>=1.11.2
+xlrd>=1.2.0
