--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ numpy==1.24.3
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.2
+patsy==0.5.3
 Pillow==9.5.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -16,5 +17,6 @@ scipy==1.10.1
 seaborn==0.12.2
 six==1.16.0
 SQLAlchemy==2.0.16
+statsmodels==0.14.0
 typing_extensions==4.6.3
 tzdata==2023.3
